# ParticleInCell.jl

./: .gitignore  CITATION.bib  LICENSE  Project.toml  README.md  run_function.jl  vm2d.jl  vm2d_fortran.jl  vp1d.jl
benchmark/: benchmarks.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl  references.bib
examples/: TwoStreamInstability.ipynb  TwoStreamInstability.jl  compute_rho_cic.jl  example_maxwell.jl  landau_damping.jl  landau_damping_poisson_cic.jl  landau_damping_poisson_cic_m6.jl  quietstart.jl  sampling_with_weights.jl  two_stream_instability.ipynb  two_stream_instability.jl  two_stream_instability.py  vp2d2v.jl  weibel_instablity.jl
notebooks/: quietstart.jl  strong_landau_damping.jl  strong_landau_damping_1d2v.jl  vm2d.jl  vm2d_fortran.jl  vp1d.jl  vp2d.jl
src/: ParticleInCell.jl  cloud_in_cell.jl  compute_current.jl  compute_rho.jl  compute_rho_cic.jl  compute_rho_m6.jl  decalage.jl  fdtd.jl  fields.jl  gnuplot.jl  heat.f90  heat.jl  integrate.jl  interpolate.jl  interpolate_cic.jl  interpolate_eb.jl  interpolation.jl  interpolation_m6.jl  landau.jl  landau_damping.jl  low_level_bsplines.jl  maxwell.jl  maxwell_1d_fem.jl  mesh.jl  meshfields.jl  particle_1d1v.jl  particle_group.jl  particle_mesh.jl  particle_mesh_coupling_1d.jl  particle_mesh_coupling_2d.jl  particle_push.jl  particles.jl  pic.f90  pic.jl  plasma.jl  poisson.jl  poisson_1d.jl  poisson_2d.jl  pushers.jl  (+11 more)
src/fortran/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  diag.gnu  heat.jl  libpic.dylib  main.f90  maxwell.f90  particules.f90  pic.f90  pic.jl  quietstart.f90  test.f90  testHeat.jl  zone.f90
(+67 files in other folders)
