set(default_build_type "Release")
cmake_minimum_required(VERSION 3.9)
enable_language(Fortran)
project( pic DESCRIPTION "fortran kernels for pic")
add_library(heatKernel SHARED heat.f90)
install(TARGETS heatKernel DESTINATION ${CMAKE_SOURCE_DIR})
add_library(pic SHARED pic.f90 maxwell.f90 particules.f90 quietstart.f90 zone.f90)
install(TARGETS pic DESTINATION ${CMAKE_SOURCE_DIR})
add_executable( vm2d.exe main.f90)
target_link_libraries( vm2d.exe pic)
